# slint-ui-hello-world

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
